--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -20,6 +20,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
+  "homepage": "https://armando-ayala.github.io/react-gifexpertapp/",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
